src/objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulting_For__c</fullName>
        <label>Consulting For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dermatalagist</fullName>
                </value>
                <value>
                    <fullName>Physicyan</fullName>
                </value>
                <value>
                    <fullName>Gyna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <label>Observations</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>first_Name__c</fullName>
        <label>first Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>first_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Mobile_Number__c</columns>
        <columns>Consulting_For__c</columns>
        <columns>Observations__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{000}</displayFormat>
        <label>PatientId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>